# OZON

./: .gitignore  123.xlsx  123s.xlsx  PRODUCTS_DATA.json  README.md  gui.py  main.py  ozon_products.xlsx  ozon_products1.xlsx  ozon_products2.xlsx  ozon_products3.xlsx  product_links.json  products.xlsx  products_urls_dict_small.json  pyproject.toml  requirements.txt  temp_links_кран_шаровой.txt  test.xlsx  ~$products.xlsx
utils/: collect_product_data.py  load_in_excel.py  logger.py  prepare_work.py  product_data.py  scroll.py  write_products_urls_in_file.py
